# SpeechForge

./: AGENTS.md  MILESTONES.md  PKGBUILD  README.md  build-adb.ts  build.ts  bunfig.toml  capacitor.config.ts  dev.ts  package.json  server.ts  tsconfig.json
.antigravitycli/: aee2b45a-b6a0-459f-a0ce-fea360a505b8.json
.github/workflows/: ci-tests.yml  release-android-apk.yml  release-linux-desktop.yml
android/app/: build.gradle
docs/: README.md  architecture.md  guidelines.md  setup.md  testing.md
src/: App.test.tsx  App.tsx  index.css  index.html  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: accent_color.rs  lib.rs
src/components/: AppHeader.test.tsx  AppHeader.tsx  AudioRecorder.tsx  AudioUploader.tsx  BottomNavigation.tsx  ChatSection.tsx  ErrorBanner.tsx  Header.tsx  OnboardingDialog.tsx  ProcessingPanel.tsx  ProviderGate.tsx  ServiceSettingsFields.tsx  SettingsPanel.tsx  TitleBar.tsx  TranscribeSection.tsx  TranscriptionResult.tsx  TranslationCard.tsx
src/constants/: deepLLanguages.ts
src/context/: LocaleContext.test.tsx  LocaleContext.tsx  SettingsContext.tsx  ThemeContext.test.tsx  ThemeContext.tsx
src/hooks/: useApiKeySettings.test.tsx  useApiKeySettings.ts  useAudioProcessing.test.ts  useAudioProcessing.ts  useAudioRecorder.test.ts  useAudioRecorder.ts  useAudioRecording.test.ts  useAudioRecording.ts  useSharedFile.ts  useTranscription.ts
src/i18n/: messages.ts
src/types/: index.ts
src/utils/: colorContrast.test.ts  colorContrast.ts  errors.ts  materialYou.test.ts  materialYou.ts  sanitize.ts
test/: setup-testing.ts
(+17 files in other folders)
