[package]
name = "app"
version = "0.6.1"
description = "SpeechForge desktop app"
authors = ["JoeShep"]
license = "MIT"
repository = "https://github.com/JoelShepard/SpeechForge"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
cpal = "0.15"
hound = "3.5"
